tests/ui/diagnostic-width/non-whitespace-trimming-unicode.stderr
error[E0308]: mismatched types
  --> $DIR/non-whitespace-trimming-unicode.rs:5:415
   |
LL | ...â™£â™¤â™¥â™¦â™§â™¨â™©â™ªâ™«â™¬â™­â™®â™¯â™°â™±â™²â™³â™´â™µâ™¶â™·â™¸â™¹â™ºâ™»â™¼â™½â™¾â™¿âš€âšâš‚âšƒâš„âš…âš†âšˆâš‰4"; let _: () = 42;  let _: &str = "ğŸ¦€â˜€â˜â˜‚â˜ƒâ˜„â˜…â˜†â˜‡â˜ˆâ˜‰â˜Šâ˜‹â˜Œâ˜â˜â˜â˜â˜‘â˜’â˜“  â˜–â˜—â˜˜â˜™â˜šâ˜›â˜œâ˜â˜â˜Ÿâ˜ â˜¡â˜¢â˜£â˜¤â˜¥â˜¦â˜§â˜¨â˜©â˜ªâ˜«â˜¬â˜­â˜®â˜¯â˜°â˜±â˜²â˜³â˜´â˜µâ˜¶â˜·â˜¸â˜¹â˜ºâ˜»â˜¼â˜½       ...
   |                                                      --   ^^ expected `()`, found integer
   |                                                      |
   |                                                      expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
